# mehr2

./: Cargo.toml  README.md  mehr2.lua
.github/workflows/: release.yml
src/: cmd.rs  config.rs  fs.rs  lock.rs  main.rs  path.rs
src/cmd/: info.rs  mod.rs  sync.rs  update.rs
src/managers/: mod.rs
src/providers/: cargo.rs  mod.rs  pacman.rs  scratch.rs
