[package]
name = "mehr2"
version = "0.0.1"
description = "Declarative package provisioning across Linux distributions"
edition = "2021"
categories = ["command-line-utilities"]
keywords = ["package-manager", "prvisioning", "lua"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/xnacly/mehr2"

[dependencies]
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
mlua = { version = "0.10.2", features = ["lua54", "vendored", "serialize"] }
log = "0.4.25"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0.139"
colog = "1.4.0"
